--- a/app/sass/_base/_form.sass
+++ b/app/sass/_base/_form.sass
@@ -4,6 +4,13 @@
 	color: $text
 	text-align: center
 	padding: 40px 55px
+	
+	h4
+		font-size: 26px
+		margin-bottom: 5px
+
+	div
+		position: relative
 
 	label.error
 		position: absolute
@@ -15,6 +22,7 @@
 		color: red
 		text-align: center
 		font-weight: 600
+		font-size: 12px
 
 	&__btn
 		background: linear-gradient(to right, #050958, #3137a2)
