--- a/app/sass/_base/_modal.sass
+++ b/app/sass/_base/_modal.sass
@@ -19,43 +19,26 @@
 		border: none
 		outline: none
 		cursor: pointer
-		animation: scale-back .2s ease-in forwards
-		&:hover
-			animation: scale .2s ease-in forwards
 
 
 #thanks
 	width: 400px
-	height: 420px
-	text-align: center
 	padding: 50px
 
 	h2
 		font-size: 32px
 		text-align: center
 		margin-bottom: 20px
-		&:after
-			display: none
-
-		span
-			font-size: 16px
-
+	
 	p
 		text-align: center
 
-	b
-		font-weight: 600
-
-	img
+	.close
 		position: absolute
-		bottom: 0
-		left: 0
-
-	.sub-title
-		margin-bottom: 15px
-
-	.hamburger
-		position: absolute
-		right: 40px
-		top: 40px
+		right: 15px
+		top: 15px
 		display: block
+		background-color: #fff
+		border: none
+		outline: none
+		cursor: pointer
