--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,6 +2,7 @@
 @import "base"
 @import "page"
 
+//--------при переносі удалити-----------------------
 .menu
 	position: fixed
 	left: 0
@@ -90,6 +91,9 @@
 	&__mail
 		margin-bottom: 15px
 
+
+//--------при переносі удалити-----------------------
+
 .header
 	background-image: url(../img/header-bg.jpg)
 	background-repeat: no-repeat
@@ -169,7 +173,7 @@
 	background-position: center
 	background-repeat: no-repeat
 	background-size: cover
-	padding: 90px 0 20px
+	padding: 77px 0 20px
 	text-align: center
 
 	img
@@ -455,7 +459,7 @@
 	background-position: center
 	background-repeat: no-repeat
 	background-size: cover
-	padding-top: 70px
+	padding-top: 75px
 	padding-bottom: 85px
 	color: #fff
 	text-align: center
