--- a/app/sass/_base/_btn.sass
+++ b/app/sass/_base/_btn.sass
@@ -15,19 +15,19 @@
 
 	&:hover
 		outline: none
-		color: $dark
+		color: #fff
 		text-decoration: none
 		cursor: pointer
 		transition: all .3s
-		background: #fff
+		background: #212121
 
 	&:focus
 		outline: none
-		color: $dark
+		color: #fff
 		text-decoration: none
 		cursor: pointer
 		transition: all .3s
-		background: #fff
+		background: #212121
 
 .green-btn
 	position: relative
