--- a/app/sass/_base/_modal.sass
+++ b/app/sass/_base/_modal.sass
@@ -1,4 +1,4 @@
-.modal
+.page-modal
 	position: relative
 	overflow: hidden
 	width: 320px
@@ -14,8 +14,8 @@
 		position: absolute
 		right: 15px
 		top: 15px
+		background: #fff
 		display: block
-		background-color: #fff
 		border: none
 		outline: none
 		cursor: pointer
