--- a/app/sass/_base/_modal.sass
+++ b/app/sass/_base/_modal.sass
@@ -12,14 +12,13 @@
 
 	.close
 		position: absolute
-		right: 15px
-		top: 15px
-		background: #fff
+		right: 0
+		top: 0
+		// background: #fff
 		display: block
 		border: none
 		outline: none
 		cursor: pointer
-
 
 #thanks
 	width: 400px
