--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -75,6 +75,7 @@ input, textarea
 	background-color: #fafafa
 	width: 100%
 	margin-bottom: 15px
+	color: #808080
 	&:focus:required:invalid
 		border: none
 		outline: none
@@ -110,6 +111,9 @@ a:focus,
 a:hover
 	outline: none
 
+button
+	padding: 15px
+	
 .link
 	position: relative
 	z-index: 1
