--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,93 +2,93 @@
 @import "base"
 
 //--------при переносі удалити-----------------------
-// .menu
-// 	position: fixed
-// 	left: 0
-// 	top: 0
-// 	bottom: 0
-// 	width: 280px
-// 	height: 100%
-// 	background-color: #040856
-// 	z-index: 1000
+	// .menu
+	// 	position: fixed
+	// 	left: 0
+	// 	top: 0
+	// 	bottom: 0
+	// 	width: 280px
+	// 	height: 100%
+	// 	background-color: #040856
+	// 	z-index: 1000
 
-// 	ul
-// 		a
-// 			position: relative
-// 			display: block
-// 			padding: 13px 0 13px 60px
-// 			text-transform: uppercase
-// 			transition: all .3s
-// 			color: #fff
-// 			width: 100%
-// 			font-weight: 300
-// 			&:hover
-// 				text-decoration: none
-// 				background-color: #1d2285
-// 				&::before
-// 					display: block
-// 			&:focus
-// 				text-decoration: none
-// 				background-color: #1d2285
-// 			&::before
-// 				content: ""
-// 				display: none
-// 				width: 100%
-// 				position: absolute
-// 				height: 2px
-// 				bottom: 0
-// 				left: 0
-// 				background: #1525ba
+	// 	ul
+	// 		a
+	// 			position: relative
+	// 			display: block
+	// 			padding: 13px 0 13px 60px
+	// 			text-transform: uppercase
+	// 			transition: all .3s
+	// 			color: #fff
+	// 			width: 100%
+	// 			font-weight: 300
+	// 			&:hover
+	// 				text-decoration: none
+	// 				background-color: #1d2285
+	// 				&::before
+	// 					display: block
+	// 			&:focus
+	// 				text-decoration: none
+	// 				background-color: #1d2285
+	// 			&::before
+	// 				content: ""
+	// 				display: none
+	// 				width: 100%
+	// 				position: absolute
+	// 				height: 2px
+	// 				bottom: 0
+	// 				left: 0
+	// 				background: #1525ba
 
-// 	li
-// 		position: relative
-// 		&::after
-// 			content: ""
-// 			width: 100%
-// 			position: absolute
-// 			height: 1px
-// 			top: 0
-// 			left: 0
-// 			background: #3137A2
-// 		&:first-child
-// 			&::after
-// 				background: none
+	// 	li
+	// 		position: relative
+	// 		&::after
+	// 			content: ""
+	// 			width: 100%
+	// 			position: absolute
+	// 			height: 1px
+	// 			top: 0
+	// 			left: 0
+	// 			background: #3137A2
+	// 		&:first-child
+	// 			&::after
+	// 				background: none
 
-// 		img
-// 			position: absolute
-// 			left: 20px
+	// 		img
+	// 			position: absolute
+	// 			left: 20px
 
-// .logo
-// 	display: block
-// 	width: 115px
-// 	height: 60px
-// 	margin: 38px auto
+	// .logo
+	// 	display: block
+	// 	width: 115px
+	// 	height: 60px
+	// 	margin: 38px auto
 
-// .info
-// 	display: flex
-// 	flex-direction: column
-// 	align-items: center
-// 	margin-top: 5px
-// 	color: #fff
+	// .info
+	// 	display: flex
+	// 	flex-direction: column
+	// 	align-items: center
+	// 	margin-top: 5px
+	// 	color: #fff
 
-// 	i
-// 		transform: rotate(90deg)
-// 		font-size: 12px
-// 		margin-right: 10px
+	// 	i
+	// 		transform: rotate(90deg)
+	// 		font-size: 12px
+	// 		margin-right: 10px
 
-// 	a
-// 		color: #fff
-// 		font-size: 14px
-// 		&:focus
-// 			text-decoration: none
-// 		&:hover
-// 			text-decoration: none
+	// 	a
+	// 		color: #fff
+	// 		font-size: 14px
+	// 		&:focus
+	// 			text-decoration: none
+	// 		&:hover
+	// 			text-decoration: none
 
-// 	p
-// 		margin: 14px 0
+	// 	p
+	// 		margin: 14px 0
 
-// 	&__mail
-// 		margin-bottom: 15px
+	// 	&__mail
+	// 		margin-bottom: 15px
 
 
 //--------при переносі удалити-----------------------
@@ -224,9 +224,11 @@
 		&:hover
 			text-decoration: none
 			color: #fff
+			background: linear-gradient(to right, #3137a2, #3137a2)
 		&:focus
 			text-decoration: none
 			color: #fff
+			background: linear-gradient(to right, #050958, #050958)
 
 .workers
 	background-image: url(../images/workers-bg.png)
@@ -554,7 +556,7 @@
 		left: 20px
 		overflow: hidden
 		background-color: #fff
-		z-index: 100
+		z-index: 1
 		padding: 30px 40px
 
 	&__img-abcolute
